<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.kendar</groupId>
    <artifactId>janus</artifactId>
    <version>1.1.1-SNAPSHOT</version>
    <modules>
        <module>janus-driver</module>
        <module>janus-driver-plain</module>
        <module>janus-engine</module>
        <module>typeconverter</module>
        <module>jacoco</module>
        <module>janus-test</module>
    </modules>
    <packaging>pom</packaging>

    <properties>
        <maven.compiler.source>11</maven.compiler.source>
        <maven.compiler.target>11</maven.compiler.target>
        <janus.version>1.1.1-SNAPSHOT</janus.version>
    </properties>

    <repositories>
        <repository>
            <id>central2</id>
            <name>Central Repository2</name>
            <url>https://repo.maven.apache.org/maven2</url>
            <!-- https://repo.maven.apache.org/maven2 -->
            <layout>default</layout>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </repository>
    </repositories>

    <dependencies>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <version>5.8.1</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-params</artifactId>
            <version>5.8.1</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
            <version>[3.12.0,4.0)</version>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
            <version>[2.11.3,3.0)</version>
        </dependency>
        <dependency>
            <groupId>commons-io</groupId>
            <artifactId>commons-io</artifactId>
            <version>[2.11.0,3.0)</version>
        </dependency>

<!--        <dependency>-->
<!--            <groupId>com.google.guava</groupId>-->
<!--            <artifactId>guava</artifactId>-->
<!--            <version>31.1-jre</version>-->
<!--        </dependency>-->
        <dependency>
            <groupId>com.fasterxml.jackson.datatype</groupId>
            <artifactId>jackson-datatype-jsr310</artifactId>
            <version>[2.11.3,3.0)</version>
        </dependency>
    </dependencies>

    <build>
        <extensions>
            <extension>
                <artifactId>wagon-ftp</artifactId>
                <groupId>org.apache.maven.wagon</groupId>
                <version>3.5.1</version>
            </extension>
        </extensions>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.0.0-M3</version>
            </plugin>
            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <version>0.8.8</version>
                <executions>
                    <execution>
                        <id>agent-for-ut</id>
                        <goals>
                            <goal>prepare-agent</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>


    <distributionManagement>
        <repository>
            <id>releases.ftp</id>
            <url>ftp://maven.kendar.org/maven2/releases</url>
        </repository>
        <snapshotRepository>
            <id>snapshots.ftp</id>
            <url>ftp://maven.kendar.org/maven2/snapshots</url>
            <uniqueVersion>false</uniqueVersion>
        </snapshotRepository>
    </distributionManagement>

</project>